--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
     .bad { color: #c22; font-weight: 700; }
     .muted { color: #666; }
     button { padding: 8px 12px; cursor: pointer; }
-    input[type="text"] { width: 100%; padding: 10px; margin-top: 6px; }
+    input[type="text"] { width: 100%; padding: 10px; }
     .small { font-size: 13px; }
-    #answer { flex: 1; min-width: 220px; margin-top: 0; }
+    #answer { flex: 1; min-width: 220px; }
     .timerBox { display: flex; gap: 14px; flex-wrap: wrap; align-items: baseline; }
     .timerStat b { font-variant-numeric: tabular-nums; }
   </style>
@@ -27,16 +27,14 @@
   <!-- Setup / Word list -->
   <div class="card">
     <div class="row" style="justify-content: space-between;">
-      <div>
-        <div class="muted small">Paste words (one per line). Update weekly.</div>
-      </div>
+      <div class="muted small">Paste words (one per line). Update weekly.</div>
       <div class="row">
         <button id="loadExample" type="button">Load Example</button>
         <button id="saveList" type="button">Save</button>
       </div>
     </div>
 
-    <div id="wordListContainer">
+    <div id="wordListContainer" style="margin-top:10px;">
       <textarea id="wordList" placeholder="one per line&#10;because&#10;friend&#10;beautiful"></textarea>
     </div>
 
@@ -65,10 +63,8 @@
     </div>
 
     <div class="row" style="margin-top:10px;">
-      <button id="start" type="button">Start</button>
       <button id="shuffle" type="button">Shuffle</button>
-      <button id="resetRun" type="button">Reset timer</button>
-      <button id="clearProgress" type="button">Clear progress</button>
+      <button id="resetAll" type="button">Reset</button>
       <span class="muted small" id="status"></span>
     </div>
 
@@ -129,16 +125,14 @@
   let voices = [];
 
   // --- Storage keys ---
-  const STORAGE_KEY = "spelling_words_v2";
-  const PROGRESS_KEY = "spelling_progress_v2";
+  const STORAGE_KEY = "spelling_words_v3";
+  const PROGRESS_KEY = "spelling_progress_v3";
 
-  // Timer/best are per-list so "best time" resets when you change the list
+  // Best is per-list so changing the weekly list gives a new best bucket
   function listSignature(text) {
-    // Normalize list text so small whitespace doesn't change the signature too much
     return text.trim().split(/\r?\n/).map(s => s.trim()).filter(Boolean).join("\n").toLowerCase();
   }
   function hashString(str) {
-    // Simple non-crypto hash for localStorage keying
     let h = 2166136261;
     for (let i = 0; i < str.length; i++) {
       h ^= str.charCodeAt(i);
@@ -161,9 +155,7 @@
     const minutes = Math.floor(totalSeconds / 60);
     const seconds = Math.floor(totalSeconds % 60);
     const tenths = Math.floor((ms % 1000) / 100);
-    const mm = String(minutes).padStart(2, "0");
-    const ss = String(seconds).padStart(2, "0");
-    return `${mm}:${ss}.${tenths}`;
+    return `${String(minutes).padStart(2,"0")}:${String(seconds).padStart(2,"0")}.${tenths}`;
   }
 
   function updateTimerDisplay() {
@@ -181,7 +173,6 @@
     if (runStarted) return;
     runStarted = true;
     startMs = Date.now() - elapsedMs;
-
     if (timerInterval) clearInterval(timerInterval);
     timerInterval = setInterval(updateTimerDisplay, 100);
     updateTimerDisplay();
@@ -216,18 +207,16 @@
     return false;
   }
 
-  // --- Persistence (list + progress) ---
+  // --- Persistence ---
   function saveList() {
     localStorage.setItem(STORAGE_KEY, wordListEl.value);
-
-    // Hide word list after saving
     wordListContainer.style.display = "none";
     editListBtn.style.display = "inline-block";
-
-    // New list means a new "best" bucket (best is keyed by list signature)
     loadBestTime();
     statusEl.textContent = "Saved.";
     setTimeout(() => statusEl.textContent = "", 1200);
+    parseWords();
+    showState();
   }
 
   function loadList() {
@@ -256,7 +245,6 @@
       opt.textContent = `${v.name} (${v.lang})`;
       voiceSelect.appendChild(opt);
     });
-
     const preferred = voices.findIndex(v => (v.lang || "").toLowerCase().startsWith("en"));
     if (preferred >= 0) voiceSelect.value = preferred;
   }
@@ -268,8 +256,7 @@
     }
     if (!text) return;
 
-    // Starting the timer on first interaction can feel nice.
-    // If you only want timer to start on first correct answer, remove the next line.
+    // Start the run on first Speak (as requested)
     startTimerIfNeeded();
 
     window.speechSynthesis.cancel();
@@ -303,56 +290,27 @@
       .filter(Boolean);
   }
 
-  function showState() {
-    progressEl.textContent = words.length
-      ? `Word ${idx + 1} of ${words.length}`
-      : "Add some words above, then click Start.";
-
-    currentWordEl.textContent = (!hideWordEl.checked && words[idx])
-      ? `Current word: ${words[idx]}`
-      : "";
-
-    feedbackEl.textContent = "";
-    answerEl.value = "";
-    answerEl.focus();
-  }
-
-  function start() {
-    parseWords();
-    if (!words.length) {
-      alert("Paste at least one word (one per line).");
-      return;
-    }
-    loadProgress();
-    idx = Math.min(idx, words.length - 1);
-
-    // Reset timer for a new run (common expectation when you press Start)
-    resetTimer();
-    loadBestTime();
-
-    showState();
-  }
-
-  function shuffleWords() {
-    parseWords();
-    for (let i = words.length - 1; i > 0; i--) {
-      const j = Math.floor(Math.random() * (i + 1));
-      [words[i], words[j]] = [words[j], words[i]];
-    }
-    idx = 0;
-
-    resetTimer();
-    loadBestTime();
-
-    showState();
-  }
-
   function current() {
     return words[idx] || "";
   }
 
   function normalize(s) {
     return (s || "").trim().toLowerCase();
+  }
+
+  function showState() {
+    progressEl.textContent = words.length
+      ? `Word ${Math.min(idx + 1, words.length)} of ${words.length}`
+      : "Add some words above, then click Save.";
+
+    currentWordEl.textContent = (!hideWordEl.checked && current())
+      ? `Current word: ${current()}`
+      : "";
+
+    if (idx < words.length) {
+      answerEl.value = "";
+      answerEl.focus();
+    }
   }
 
   function finishRun() {
@@ -368,13 +326,21 @@
     currentWordEl.textContent = "";
   }
 
+  // Auto-speak next word after correct
+  function speakNextWordSoon() {
+    // small delay so the "Correct!" feedback is visible
+    setTimeout(() => {
+      if (idx < words.length) speakText(current());
+    }, 450);
+  }
+
   function check() {
     const target = normalize(current());
     const typed = normalize(answerEl.value);
-
     if (!target) return;
 
-    // Start timer on first attempt (if not already started)
+    // Timer should already be running if they used Speak first,
+    // but starting it here is harmless if they check first.
     startTimerIfNeeded();
 
     if (typed === target) {
@@ -386,7 +352,9 @@
         finishRun();
         return;
       }
-      setTimeout(showState, 350);
+
+      showState();
+      speakNextWordSoon();
     } else {
       feedbackEl.innerHTML =
         `<span class="bad">❌ Try again.</span> <span class="muted small">(Press Reveal if needed.)</span>`;
@@ -407,22 +375,33 @@
     showState();
   }
 
-  // --- Wire up UI ---
-  el("start").addEventListener("click", start);
-  el("shuffle").addEventListener("click", shuffleWords);
-  el("saveList").addEventListener("click", saveList);
-  el("resetRun").addEventListener("click", () => {
+  function shuffleWords() {
+    parseWords();
+    for (let i = words.length - 1; i > 0; i--) {
+      const j = Math.floor(Math.random() * (i + 1));
+      [words[i], words[j]] = [words[j], words[i]];
+    }
+    idx = 0;
+    saveProgress();
     resetTimer();
     feedbackEl.textContent = "";
-    answerEl.focus();
-  });
-  el("clearProgress").addEventListener("click", () => {
+    loadBestTime();
+    showState();
+  }
+
+  // Reset = clear progress + reset timer + clear feedback
+  function resetAll() {
     localStorage.removeItem(PROGRESS_KEY);
     idx = 0;
     resetTimer();
     feedbackEl.textContent = "";
     showState();
-  });
+  }
+
+  // --- Wire up UI ---
+  el("shuffle").addEventListener("click", shuffleWords);
+  el("resetAll").addEventListener("click", resetAll);
+  el("saveList").addEventListener("click", saveList);
 
   el("speak").addEventListener("click", () => speakText(current()));
   el("repeat").addEventListener("click", () => speakText(current()));
@@ -437,7 +416,11 @@
     if (e.key === "Enter") check();
   });
 
-  hideWordEl.addEventListener("change", showState);
+  hideWordEl.addEventListener("change", () => {
+    currentWordEl.textContent = (!hideWordEl.checked && current())
+      ? `Current word: ${current()}`
+      : "";
+  });
 
   editListBtn.addEventListener("click", () => {
     wordListContainer.style.display = "block";
@@ -453,13 +436,13 @@
   loadList();
   rateVal.textContent = rate.value;
 
-  // Auto-hide list on load if a list exists
   if (localStorage.getItem(STORAGE_KEY)) {
     wordListContainer.style.display = "none";
     editListBtn.style.display = "inline-block";
   }
 
   parseWords();
+  loadProgress();
   loadBestTime();
   resetTimer();
   showState();
